syntax = "proto3";

package csd;

option go_package = "google.golang.org/grpc/profiling/proto";

service GreetingService {
  rpc HelloEN(GreetingRequest) returns (GreetingResponse);
  rpc HelloTR(GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  bool married = 4;
}

message GreetingResponse {
  int32 id = 1;
  string message = 2;
  string maritalStatus = 3;
}

